; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/joystick/extr_xpad.c_xpad_start_input.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/joystick/extr_xpad.c_xpad_start_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_xpad = type { i64, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@XTYPE_XBOXONE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_xpad*)* @xpad_start_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xpad_start_input(%struct.usb_xpad* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_xpad*, align 8
  %4 = alloca i32, align 4
  store %struct.usb_xpad* %0, %struct.usb_xpad** %3, align 8
  %5 = load %struct.usb_xpad*, %struct.usb_xpad** %3, align 8
  %6 = getelementptr inbounds %struct.usb_xpad, %struct.usb_xpad* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @GFP_KERNEL, align 4
  %9 = call i64 @usb_submit_urb(i32 %7, i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load i32, i32* @EIO, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %2, align 4
  br label %33

14:                                               ; preds = %1
  %15 = load %struct.usb_xpad*, %struct.usb_xpad** %3, align 8
  %16 = getelementptr inbounds %struct.usb_xpad, %struct.usb_xpad* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @XTYPE_XBOXONE, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %32

20:                                               ; preds = %14
  %21 = load %struct.usb_xpad*, %struct.usb_xpad** %3, align 8
  %22 = call i32 @xpad_start_xbox_one(%struct.usb_xpad* %21)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %20
  %26 = load %struct.usb_xpad*, %struct.usb_xpad** %3, align 8
  %27 = getelementptr inbounds %struct.usb_xpad, %struct.usb_xpad* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @usb_kill_urb(i32 %28)
  %30 = load i32, i32* %4, align 4
  store i32 %30, i32* %2, align 4
  br label %33

31:                                               ; preds = %20
  br label %32

32:                                               ; preds = %31, %14
  store i32 0, i32* %2, align 4
  br label %33

33:                                               ; preds = %32, %25, %11
  %34 = load i32, i32* %2, align 4
  ret i32 %34
}

declare dso_local i64 @usb_submit_urb(i32, i32) #1

declare dso_local i32 @xpad_start_xbox_one(%struct.usb_xpad*) #1

declare dso_local i32 @usb_kill_urb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
